cluster-config/dev/find/provisioning/prod/container/container.yaml
---
---
# Source: container/templates/container-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: provisioning
    app.kubernetes.io/instance: provisioning-prod
  name: provisioning-prod
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: provisioning
    app.kubernetes.io/instance: provisioning-prod
---

# Source: container/templates/container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provisioning-prod
  namespace: default
  labels:
    app.kubernetes.io/name: provisioning
    app.kubernetes.io/instance: provisioning-prod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: provisioning
      app.kubernetes.io/instance: provisioning-prod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: provisioning
        app.kubernetes.io/instance: provisioning-prod
    spec:
      containers:
      - name: provisioning
        image: episerver.azurecr.io/episerver/find-services-provisioning:0.1-develop-50360
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "200m"
            memory: "800Mi"
          requests:
            cpu: "150m"
            memory: "600Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 60
          timeoutSeconds: 2
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: azure
          mountPath: /mnt/azure
        - name: cg-resources
          mountPath: /mnt/opensearch-resources
      restartPolicy: Always
      imagePullSecrets:
      - name: acr-auth
      volumes:
      - name: azure
        azureFile:
          secretName: fileshare-secrets
          shareName: optiq-logs-prod
          readOnly: false
      - name: cg-resources
        azureFile:
          secretName: fileshare-secrets
          shareName: optiq-opensearch-resources
          readOnly: false
status: {}
---

# Source: container/templates/container-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-provisioning-prod
  namespace: default
spec:
  entryPoints:
    - https
    - internal-http
  tls:
    store: 
      name: default
  routes:
  - match: 'PathPrefix(`/accounts`) && Headers(`Ring`, `prod`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: rate-limiter
    services:
    - name: provisioning-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/accounts`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: rate-limiter
    services:
    - name: provisioning-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/resources`) && Headers(`Ring`, `prod`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: rate-limiter
    services:
    - name: provisioning-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/resources`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: rate-limiter
    services:
    - name: provisioning-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/_mapping`) && Headers(`Ring`, `prod`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: rate-limiter
    services:
    - name: provisioning-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/_mapping`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: rate-limiter
    services:
    - name: provisioning-prod
      port: 80
      namespace: default
---

# Source: container/templates/container-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-provisioning-prod-swagger
  namespace: default
spec:
  entryPoints:
    - https
    - internal-http
  tls:
    store: 
      name: default
  routes:
  - match: 'PathPrefix(`/provisioning-api/swagger`) && Headers(`Ring`, `prod`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: strip-provisioning-prod-api-prefix
    services:
    - name: provisioning-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/provisioning-api/swagger`) && Headers(`X-Cluster-Secret`, `73c40afe533a0e07dc55f668aecad113a498f385115c247b356b1c0a1e0f04b5`)'
    kind: Rule
    middlewares:
    - name: strip-provisioning-prod-api-prefix
    services:
    - name: provisioning-prod
      port: 80
      namespace: default
---

# Source: container/templates/container-service-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-provisioning-prod-health
  namespace: default
spec:
  entryPoints:
    - https
    - internal-http
  tls:
    store: 
      name: default
  routes:
  - match: 'PathPrefix(`/provisioning-service/health`) && Headers(`Ring`, `prod`)'
    kind: Rule
    middlewares:
    - name: replace-provisioning-prod-service-health-path
    services:
    - name: provisioning-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/provisioning-service/health`)'
    kind: Rule
    middlewares:
    - name: replace-provisioning-prod-service-health-path
    services:
    - name: provisioning-prod
      port: 80
      namespace: default
---

# Source: container/templates/container-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-provisioning-prod-api-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /provisioning-api/
---

# Source: container/templates/container-service-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: replace-provisioning-prod-service-health-path
  namespace: default
spec:
  replacePath:
    path: /health
